--- a/WoldCupApp18/src/Views/FXMLAffichageTeams.fxml
+++ b/WoldCupApp18/src/Views/FXMLAffichageTeams.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="738.0" prefWidth="828.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.FXMLAffichageTeamController">
+<AnchorPane id="AnchorPane" prefHeight="738.0" prefWidth="828.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAffichageTeamController">
    <children>
       <TableView fx:id="table" layoutX="26.0" layoutY="389.0" prefHeight="340.0" prefWidth="395.0">
         <columns>
