--- a/WoldCupApp18/src/Views/FXMLShowHotels.fxml
+++ b/WoldCupApp18/src/Views/FXMLShowHotels.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="world_cup_app_18.FXMLShowHotelsController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="Controllers.FXMLShowHotelsController">
    <children>
       <AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" prefHeight="595.0" prefWidth="600.0">
          <children>
