--- a/WoldCupApp18/src/Views/FXMLUpdateUser.fxml
+++ b/WoldCupApp18/src/Views/FXMLUpdateUser.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.FXMLUpdateUserController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLUpdateUserController">
    <children>
       <Label layoutX="201.0" layoutY="24.0" prefHeight="32.0" prefWidth="219.0" text="Modifier mon compte">
          <font>
