--- a/WoldCupApp18/src/Views/FXMLadminInterface.fxml
+++ b/WoldCupApp18/src/Views/FXMLadminInterface.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="Views.FXMLadminInterfaceController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="Controllers.FXMLadminInterfaceController">
    <children>
       <Button fx:id="gererusers" layoutX="14.0" layoutY="24.0" mnemonicParsing="false" onAction="#gererUsers" prefHeight="25.0" prefWidth="196.0" text="Gerer les comptes des utilisateurs" />
    </children>
