--- a/WoldCupApp18/src/Views/FXMLupdateuserrights.fxml
+++ b/WoldCupApp18/src/Views/FXMLupdateuserrights.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.FXMLupdateuserrightsController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLupdateuserrightsController">
    <children>
       <AnchorPane id="AnchorPane" layoutX="5.0" layoutY="5.0" prefHeight="517.0" prefWidth="746.0">
          <children>
