--- a/WoldCupApp18/src/Views/FXMLAddMatch.fxml
+++ b/WoldCupApp18/src/Views/FXMLAddMatch.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="959.0" style="-fx-background-color: #2c3e50;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXML_matchController">
+<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="959.0" style="-fx-background-color: #2c3e50;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAddMatchController">
     <stylesheets>
-        <URL value="@fxml_match.css" />
+     <!-- <URL value="@fxml_match.css" /> -->
     </stylesheets>
    <children>
       <TextField fx:id="Referee_textfield" layoutX="299.0" layoutY="219.0" />
