--- a/WoldCupApp18/src/Views/FXMLShowMatchs.fxml
+++ b/WoldCupApp18/src/Views/FXMLShowMatchs.fxml
@@ -10,9 +10,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="AnchorPane" prefHeight="543.0" prefWidth="959.0" style="-fx-background-color: #2c3e50;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXML_ShowAllController">
+<AnchorPane id="AnchorPane" fx:id="AnchorPane" prefHeight="543.0" prefWidth="959.0" style="-fx-background-color: #2c3e50;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLShowMatchsController">
     <stylesheets>
-        <URL value="@fxml_showall.css" />
     </stylesheets>
    <children>
       <TableView fx:id="Table_matchAll" layoutX="-3.0" layoutY="76.0" prefHeight="426.0" prefWidth="959.0">
