--- a/WoldCupApp18/src/Views/FXMLAddTeam.fxml
+++ b/WoldCupApp18/src/Views/FXMLAddTeam.fxml
@@ -30,7 +30,7 @@
       <ImageView fx:id="pic1" fitHeight="69.0" fitWidth="105.0" layoutX="385.0" layoutY="486.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView cache="true" fitHeight="203.0" fitWidth="160.0" layoutX="189.0" layoutY="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@FIFA_World_Cup_2018_Logo.png" />
+            <Image url="@../Resources/Icons/FIFA_World_Cup_2018_Logo.png" />
          </image>
       </ImageView>
       <Button fx:id="retour" layoutX="151.0" layoutY="555.0" mnemonicParsing="false" onAction="#retourner" text="Retour" />
