--- a/WoldCupApp18/src/Views/FXMLAffichageTeamUser.fxml
+++ b/WoldCupApp18/src/Views/FXMLAffichageTeamUser.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="554.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="guiTest.FXMLAffichageTeamUserController">
+<AnchorPane id="AnchorPane" prefHeight="554.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAffichageTeamUserController">
    <children>
       <ImageView fitHeight="129.0" fitWidth="134.0" layoutX="14.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
