--- a/WoldCupApp18/src/Views/FXMLStatPlayer.fxml
+++ b/WoldCupApp18/src/Views/FXMLStatPlayer.fxml
@@ -1,20 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="470.0" prefWidth="632.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="Controllers.FXMLStatPlayerController">
+<AnchorPane id="AnchorPane" prefHeight="470.0" prefWidth="632.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLStatPlayerController">
    <children>
-      <VBox fx:id="vb" layoutX="-1.0" layoutY="69.0" prefHeight="401.0" prefWidth="632.0">
-         <children>
-            <PieChart fx:id="pie" title="Goals per match" />
-            <PieChart fx:id="pie2" />
-            <PieChart fx:id="pie3" />
-         </children>
-      </VBox>
-      <Text fx:id="text" layoutX="304.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text fx:id="text" layoutX="295.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistics" wrappingWidth="47.36328125" />
+      <TabPane fx:id="tabPane" layoutY="64.0" prefHeight="406.0" prefWidth="638.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab fx:id="tab1" text="BEST ATTACK">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ScrollPane fx:id="sp" layoutY="44.0" prefHeight="398.0" prefWidth="638.0">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="493.0" prefWidth="639.0">
+                                 <children>
+                                    <VBox fx:id="vb" prefHeight="401.0" prefWidth="632.0">
+                                       <children>
+                                          <PieChart fx:id="pie" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </AnchorPane>
+                           </content>
+                        </ScrollPane>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab fx:id="tab1" text="MOST WINNER TEAM">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ScrollPane fx:id="sp1" prefHeight="398.0" prefWidth="638.0">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="493.0" prefWidth="639.0">
+                                 <children>
+                                    <VBox fx:id="vb1" prefHeight="401.0" prefWidth="632.0">
+                                       <children>
+                                          <PieChart fx:id="pie1" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </AnchorPane>
+                           </content>
+                        </ScrollPane>
+                     </children></AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
