--- a/WoldCupApp18/src/Views/FXMLCreate.fxml
+++ b/WoldCupApp18/src/Views/FXMLCreate.fxml
@@ -11,12 +11,13 @@
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
       <TextField fx:id="name" layoutX="245.0" layoutY="33.0" />
       <TextField fx:id="lastname" layoutX="245.0" layoutY="71.0" />
-      <TextField fx:id="birthday" layoutX="245.0" layoutY="116.0" />
       <TextField fx:id="nationality" layoutX="245.0" layoutY="161.0" />
       <TextField fx:id="email" layoutX="245.0" layoutY="204.0" />
       <TextField fx:id="tel" layoutX="245.0" layoutY="249.0" />
       <TextField fx:id="login" layoutX="245.0" layoutY="298.0" />
       <TextField fx:id="password" layoutX="246.0" layoutY="343.0" />
+      <PasswordField fx:id="password2" layoutX="246.0" layoutY="385.0" />
+      <ChoiceBox fx:id="team" layoutX="245.0" layoutY="423.0" prefWidth="150.0" />
       <Label layoutX="50.0" layoutY="37.0" text="prenom:" />
       <Label layoutX="52.0" layoutY="75.0" text="nom:" />
       <Label layoutX="52.0" layoutY="120.0" text="date de naissance:" />
@@ -27,9 +28,7 @@
       <Label layoutX="56.0" layoutY="347.0" text="mot de passe:" />
       <Label layoutX="57.0" layoutY="427.0" text="equipe preferee:" />
       <Button fx:id="save" layoutX="141.0" layoutY="490.0" mnemonicParsing="false" onAction="#addd" text="ajouter" />
-      <ChoiceBox fx:id="team" layoutX="245.0" layoutY="423.0" prefWidth="150.0" />
       <Label layoutX="56.0" layoutY="389.0" prefHeight="17.0" prefWidth="169.0" text="confirmation du mot de passe:" />
-      <PasswordField fx:id="password2" layoutX="246.0" layoutY="385.0" />
-      <Button fx:id="retour" layoutX="268.0" layoutY="490.0" mnemonicParsing="false" onAction="#retour" text="retour" />
+      <DatePicker fx:id="birthday" layoutX="245.0" layoutY="116.0" prefHeight="25.0" prefWidth="149.0" />
     </children>
 </AnchorPane>
