--- a/WoldCupApp18/src/Views/FXMLauthentification.fxml
+++ b/WoldCupApp18/src/Views/FXMLauthentification.fxml
@@ -1,24 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<?import org.controlsfx.control.HyperlinkLabel?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2c3e50;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLauthentificationController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #40739e;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLauthentificationController">
    <children>
-      <ImageView fitHeight="126.0" fitWidth="149.0" layoutX="236.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="367.0" fitWidth="304.0" layoutX="204.0" layoutY="18.0" opacity="0.24" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@FIFA_World_Cup_2018_Logo.png" />
+            <Image url="@../Resources/Icons/masckot.png" />
          </image>
       </ImageView>
-      <JFXTextField fx:id="login" layoutX="226.0" layoutY="175.0" promptText="identifiant" style="-fx-background-color: #ecf0f1;" />
-      <JFXPasswordField fx:id="password" layoutX="226.0" layoutY="221.0" promptText="mot de passe" style="-fx-background-color: #ecf0f1;" />
-      <JFXButton fx:id="connect" layoutX="252.0" layoutY="277.0" onAction="#authentification" style="-fx-background-color: #e74c3c;" text="se connecter" textAlignment="CENTER" />
-      <JFXButton fx:id="creer" layoutX="243.0" layoutY="322.0" onAction="#creerCompte" style="-fx-background-color: #e74c3c;" text="creer un compte" textAlignment="CENTER" />
-      <JFXButton fx:id="sms" layoutX="234.0" layoutY="361.0" onAction="#sendSms" style="-fx-background-color: #e74c3c;" text="mot de passe publié" />
+      <AnchorPane layoutX="17.0" layoutY="21.0" prefHeight="360.0" prefWidth="400.0">
+         <children>
+            <JFXButton fx:id="creer" layoutX="28.0" layoutY="259.0" onAction="#creerCompte" prefHeight="27.0" prefWidth="187.0" style="-fx-background-color: #e74c3c;" text="Sign Up" textAlignment="CENTER" />
+            <Label layoutX="11.0" layoutY="88.0" style="-fx-text-fill: lightgrey;" text="Wold Cup App 18'">
+               <font>
+                  <Font name="System Bold" size="29.0" />
+               </font>
+            </Label>
+            <Text fill="#fcfcfc" layoutX="18.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Follow your favorit team all along" wrappingWidth="245.77325439453125" />
+            <Text fill="#fcfcfc" layoutX="18.0" layoutY="217.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FIFA's Wold Cup 2O18 in Russia" wrappingWidth="245.77325439453125" />
+            <Text fill="#fcfcfc" layoutX="18.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="and Support it all the way " wrappingWidth="245.77325439453125" />
+            <Label layoutX="11.0" layoutY="124.0" style="-fx-text-fill: #273c75; -fx-font-size: 20;" text="Stay Loyal ...">
+               <font>
+                  <Font name="System Bold" size="29.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="446.0" layoutY="19.0" prefHeight="364.0" prefWidth="206.0" style="-fx-background-color: #dcdde1; -fx-border-color: #718093; -fx-border-width: 1;">
+         <children>
+            <JFXTextField fx:id="login" layoutX="21.0" layoutY="123.0" promptText="Pseudo Name" style="-fx-background-color: #ecf0f1;" />
+            <JFXPasswordField fx:id="password" layoutX="21.0" layoutY="177.0" promptText="Password" style="-fx-background-color: #ecf0f1;" />
+            <JFXButton fx:id="connect" layoutX="23.0" layoutY="256.0" onAction="#authentification" prefHeight="27.0" prefWidth="164.0" style="-fx-background-color: #e74c3c;" text="Sign In" textAlignment="CENTER" />
+            <HyperlinkLabel fx:id="sms" layoutX="43.0" layoutY="315.0" onMouseDragEntered="#sendSms" text="Forgot Password ?" />
+            <Label layoutX="78.0" layoutY="31.0" text="Sign Up" />
+            <Label layoutX="66.0" layoutY="48.0" prefHeight="17.0" prefWidth="87.0" text="Be a Membre">
+               <font>
+                  <Font name="Lato Light" size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="54.0" layoutY="66.0" text="of our ">
+               <font>
+                  <Font name="Lato Light" size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="91.0" layoutY="66.0" text="community :)">
+               <font>
+                  <Font name="Lato Semibold" size="13.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <Label layoutX="679.0" layoutY="4.0" style="-fx-text-fill: lightgrey;" text="X">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
