--- a/WoldCupApp18/src/Views/FXMLauthentification.fxml
+++ b/WoldCupApp18/src/Views/FXMLauthentification.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import org.controlsfx.control.HyperlinkLabel?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #40739e;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLauthentificationController">
    <children>
@@ -41,7 +40,6 @@
             <JFXTextField fx:id="login" layoutX="21.0" layoutY="123.0" promptText="Pseudo Name" style="-fx-background-color: #ecf0f1;" />
             <JFXPasswordField fx:id="password" layoutX="21.0" layoutY="177.0" promptText="Password" style="-fx-background-color: #ecf0f1;" />
             <JFXButton fx:id="connect" layoutX="23.0" layoutY="256.0" onAction="#authentification" prefHeight="27.0" prefWidth="164.0" style="-fx-background-color: #e74c3c;" text="Sign In" textAlignment="CENTER" />
-            <HyperlinkLabel fx:id="sms" layoutX="43.0" layoutY="315.0" onMouseDragEntered="#sendSms" text="Forgot Password ?" />
             <Label layoutX="78.0" layoutY="31.0" text="Sign Up" />
             <Label layoutX="66.0" layoutY="48.0" prefHeight="17.0" prefWidth="87.0" text="Be a Membre">
                <font>
@@ -58,6 +56,7 @@
                   <Font name="Lato Semibold" size="13.0" />
                </font>
             </Label>
+            <Label fx:id="ForgotPass" layoutX="46.0" layoutY="302.0" onMouseEntered="#SelectLabel" onMouseExited="#DeselectLabel" text="Forgot Password ?" />
          </children>
       </AnchorPane>
       <Label layoutX="679.0" layoutY="4.0" style="-fx-text-fill: lightgrey;" text="X">
