--- a/WoldCupApp18/src/Views/FXMLShowArticleUser.fxml
+++ b/WoldCupApp18/src/Views/FXMLShowArticleUser.fxml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLShowArticleUserController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="733.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLShowArticleUserController">
    <children>
-      <ScrollPane fx:id="sp" layoutX="159.0" prefHeight="400.0" prefWidth="442.0">
+      <ScrollPane fx:id="sp" layoutX="159.0" prefHeight="400.0" prefWidth="576.0">
          <content>
-            <VBox fx:id="vb" prefHeight="345.0" prefWidth="396.0" translateX="20.0" translateY="20.0" translateZ="20.0">
-               <opaqueInsets>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </opaqueInsets>
-            </VBox>
+            <AnchorPane prefHeight="386.0" prefWidth="563.0">
+               <children>
+                  <VBox fx:id="vb" prefHeight="387.0" prefWidth="565.0" />
+               </children>
+            </AnchorPane>
          </content>
       </ScrollPane>
    </children>
