--- a/WoldCupApp18/src/Views/FXMLauthentification.fxml
+++ b/WoldCupApp18/src/Views/FXMLauthentification.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #40739e;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLauthentificationController">
+<AnchorPane id="AnchorPane" fx:id="MainPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #40739e;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLauthentificationController">
    <children>
       <ImageView fitHeight="367.0" fitWidth="304.0" layoutX="204.0" layoutY="18.0" opacity="0.24" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -56,10 +56,14 @@
                   <Font name="Lato Semibold" size="13.0" />
                </font>
             </Label>
-            <Label fx:id="ForgotPass" layoutX="46.0" layoutY="302.0" onMouseEntered="#SelectLabel" onMouseExited="#DeselectLabel" text="Forgot Password ?" />
+            <Label fx:id="ForgotPass" layoutX="46.0" layoutY="302.0" onMouseClicked="#SmsView" onMouseEntered="#SelectLabel" onMouseExited="#DeselectLabel" text="Forgot Password ?">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
-      <Label layoutX="679.0" layoutY="4.0" style="-fx-text-fill: lightgrey;" text="X">
+      <Label fx:id="ExitLabel" layoutX="679.0" layoutY="4.0" onMouseClicked="#ExitApp" style="-fx-text-fill: lightgrey;" text="X">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
