--- a/WoldCupApp18/src/Views/FXMLMatchUSer.fxml
+++ b/WoldCupApp18/src/Views/FXMLMatchUSer.fxml
@@ -7,34 +7,39 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #f5f6fa;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLMatchUSerController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #40739e;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLMatchUSerController">
     <stylesheets>
         <URL value="@fxmlmatchuser.css" />
     </stylesheets>
    <children>
-      <JFXButton fx:id="ShowStream" layoutX="60.0" layoutY="538.0" onAction="#ShowStream" prefHeight="44.0" prefWidth="179.0" style="-fx-background-color: #e84118; -fx-text-fill: white;" text="Show Match ">
+      <JFXButton fx:id="ShowStream" layoutX="17.0" layoutY="539.0" onAction="#ShowStream" prefHeight="35.0" prefWidth="188.0" style="-fx-background-color: #e84118; -fx-text-fill: white;" text="Show Match ">
          <font>
-            <Font size="22.0" />
+            <Font size="18.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="Reload" layoutX="258.0" layoutY="539.0" onAction="#ReloadFn" prefWidth="113.0" style="-fx-background-color: #e84118; -fx-text-fill: white;" text="Reload">
+      <JFXButton fx:id="Reload" layoutX="228.0" layoutY="539.0" onAction="#ReloadFn" prefWidth="113.0" style="-fx-background-color: #e84118; -fx-text-fill: white;" text="Reload">
          <font>
-            <Font size="22.0" />
+            <Font size="18.0" />
          </font>
       </JFXButton>
-      <Label layoutX="256.0" layoutY="24.0" text="Watch Game Live @BeinSports">
+      <Label layoutX="256.0" layoutY="24.0" text="Watch Game Live @BeinSports" textFill="#282828">
          <font>
             <Font name="System Bold" size="31.0" />
          </font>
       </Label>
-      <StackPane fx:id="StreamPane" layoutX="9.0" layoutY="78.0" prefHeight="444.0" prefWidth="976.0" style="-fx-background-color: #273c75; -fx-border-color: #487eb0; -fx-border-width: 2;">
+      <StackPane fx:id="StreamPane" layoutX="12.0" layoutY="78.0" prefHeight="444.0" prefWidth="976.0" style="-fx-background-color: #f5f6fa; -fx-border-color: #7f8fa6; -fx-border-width: 2;">
          <children>
-            <Label text="Click on show match for Live Steam.." textFill="#eeeeee">
+            <Label text="Click on show match for Live Steam.." textFill="#222222">
                <font>
                   <Font name="Lato Light" size="28.0" />
                </font>
             </Label>
          </children>
       </StackPane>
+      <JFXButton fx:id="Back" layoutX="860.0" layoutY="538.0" onAction="#SwitchShowMatchUser" prefWidth="113.0" style="-fx-background-color: #e84118; -fx-text-fill: white;" text="Back">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
