--- a/WoldCupApp18/src/Views/FXMLAffichageTeamUser.fxml
+++ b/WoldCupApp18/src/Views/FXMLAffichageTeamUser.fxml
@@ -37,11 +37,12 @@
       </TableView>
       <ImageView fx:id="flagview" fitHeight="150.0" fitWidth="200.0" layoutX="500.0" layoutY="172.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="logoview" fitHeight="150.0" fitWidth="200.0" layoutX="500.0" layoutY="338.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="PLAY" layoutX="500.0" layoutY="506.0" mnemonicParsing="false" onAction="#play" text="Anthem On" />
-      <Button fx:id="STOP" layoutX="622.0" layoutY="506.0" mnemonicParsing="false" onAction="#stop" text="Anthem Off" />
+      <Button fx:id="PLAY" layoutX="460.0" layoutY="507.0" mnemonicParsing="false" onAction="#play" text="Anthem On" />
+      <Button fx:id="STOP" layoutX="561.0" layoutY="507.0" mnemonicParsing="false" onAction="#stop" text="Anthem Off" />
       <ChoiceBox fx:id="choice" layoutX="24.0" layoutY="181.0" prefWidth="150.0" />
       <TextField fx:id="rechercheteam_txt" layoutX="211.0" layoutY="181.0" />
       <ComboBox fx:id="continents" layoutX="211.0" layoutY="181.0" onAction="#rechercheContinent" prefWidth="150.0" />
       <ComboBox fx:id="groupes" layoutX="211.0" layoutY="181.0" onAction="#rechercheGroupes" prefWidth="150.0" />
+      <Button fx:id="home" layoutX="674.0" layoutY="507.0" mnemonicParsing="false" onAction="#SwitchToHome" text="Home" />
    </children>
 </AnchorPane>
