--- a/WoldCupApp18/src/Views/FXMLCreateAccount.fxml
+++ b/WoldCupApp18/src/Views/FXMLCreateAccount.fxml
@@ -30,5 +30,6 @@
       <Button fx:id="save" layoutX="141.0" layoutY="490.0" mnemonicParsing="false" onAction="#addd" text="ajouter" />
       <Label layoutX="56.0" layoutY="389.0" prefHeight="17.0" prefWidth="169.0" text="confirmation du mot de passe:" />
       <DatePicker fx:id="birthday" layoutX="245.0" layoutY="116.0" prefHeight="25.0" prefWidth="149.0" />
+      <Button fx:id="home" layoutX="246.0" layoutY="490.0" mnemonicParsing="false" onAction="#SwitchToHome" text="Home" />
     </children>
 </AnchorPane>
