--- a/WoldCupApp18/src/Views/FXMLStatPlayer.fxml
+++ b/WoldCupApp18/src/Views/FXMLStatPlayer.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
@@ -8,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="470.0" prefWidth="632.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLStatPlayerController">
+<AnchorPane id="AnchorPane" prefHeight="470.0" prefWidth="632.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLStatPlayerController">
    <children>
       <Text fx:id="text" layoutX="295.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistics" wrappingWidth="47.36328125" />
       <TabPane fx:id="tabPane" layoutY="64.0" prefHeight="406.0" prefWidth="638.0" tabClosingPolicy="UNAVAILABLE">
@@ -56,5 +61,6 @@
           </Tab>
         </tabs>
       </TabPane>
+      <Button fx:id="home" layoutX="38.0" layoutY="15.0" mnemonicParsing="false" onAction="#SwitchToHome" text="Home" />
    </children>
 </AnchorPane>
