--- a/WoldCupApp18/src/Views/FXMLUpdateUser.fxml
+++ b/WoldCupApp18/src/Views/FXMLUpdateUser.fxml
@@ -14,15 +14,15 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Label layoutX="52.0" layoutY="82.0" text="Nom:" />
-      <Label layoutX="52.0" layoutY="112.0" text="Prenom:" />
-      <Label layoutX="52.0" layoutY="147.0" text="Date de naissance:" />
-      <Label layoutX="52.0" layoutY="183.0" text="Nationalite:" />
+      <Label layoutX="52.0" layoutY="82.0" text="Name:" />
+      <Label layoutX="52.0" layoutY="112.0" text="Last Name:" />
+      <Label layoutX="52.0" layoutY="147.0" text="Birthday:" />
+      <Label layoutX="52.0" layoutY="183.0" text="Nationality:" />
       <Label layoutX="52.0" layoutY="216.0" text="e-mail:" />
-      <Label layoutX="52.0" layoutY="250.0" text="telephone:" />
-      <Label layoutX="52.0" layoutY="285.0" text="identifiant:" />
-      <Label layoutX="52.0" layoutY="315.0" text="mot de passe:" />
-      <Label layoutX="52.0" layoutY="344.0" text="equipe préférée:" />
+      <Label layoutX="52.0" layoutY="250.0" text="Phone number:" />
+      <Label layoutX="52.0" layoutY="285.0" text="Login:" />
+      <Label layoutX="52.0" layoutY="315.0" text="Password:" />
+      <Label layoutX="52.0" layoutY="344.0" text="favorite team:" />
       <TextField fx:id="name" layoutX="218.0" layoutY="78.0" />
       <TextField fx:id="last_name" layoutX="218.0" layoutY="108.0" />
       <TextField fx:id="nationaity" layoutX="218.0" layoutY="179.0" />
@@ -31,8 +31,9 @@
       <TextField fx:id="login" layoutX="218.0" layoutY="281.0" />
       <TextField fx:id="password" layoutX="218.0" layoutY="311.0" />
       <ChoiceBox fx:id="team" layoutX="218.0" layoutY="340.0" prefWidth="150.0" />
-      <Button fx:id="buttonvalid" layoutX="427.0" layoutY="204.0" mnemonicParsing="false" onAction="#updateUser" prefHeight="25.0" prefWidth="99.0" text="valider" />
-      <Button fx:id="logout" layoutX="33.0" layoutY="28.0" mnemonicParsing="false" onAction="#logout" prefHeight="25.0" prefWidth="112.0" text="se déconnecter" />
+      <Button fx:id="buttonvalid" layoutX="427.0" layoutY="204.0" mnemonicParsing="false" onAction="#updateUser" prefHeight="25.0" prefWidth="99.0" text="Confirm" />
+      <Button fx:id="logout" layoutX="470.0" layoutY="28.0" mnemonicParsing="false" onAction="#logout" prefHeight="25.0" prefWidth="112.0" text="Log Out" />
       <DatePicker fx:id="birthday" layoutX="217.0" layoutY="143.0" prefHeight="25.0" prefWidth="149.0" />
+      <Button fx:id="home" layoutX="43.0" layoutY="28.0" mnemonicParsing="false" onAction="#SwitchToHome" text="Home" />
    </children>
 </AnchorPane>
