--- a/WoldCupApp18/src/Views/FXMLStation.fxml
+++ b/WoldCupApp18/src/Views/FXMLStation.fxml
@@ -9,23 +9,23 @@
 
 <AnchorPane id="AnchorPane" prefHeight="548.0" prefWidth="712.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLStationController">
    <children>
-      <Label layoutX="237.0" layoutY="25.0" prefHeight="40.0" prefWidth="221.0" text="Ajouter Station">
+      <Label layoutX="237.0" layoutY="25.0" prefHeight="40.0" prefWidth="221.0" text="Ajouter Station" textFill="#a612e1">
          <font>
             <Font size="28.0" />
          </font>
       </Label>
-      <Label layoutX="46.0" layoutY="92.0" text="Nom Station :" />
-      <Label layoutX="46.0" layoutY="124.0" text="Localisation Station :" />
-      <Label layoutX="46.0" layoutY="160.0" text="Type Station :" />
-      <Label layoutX="46.0" layoutY="200.0" text="XMAP :" />
-      <Label layoutX="46.0" layoutY="233.0" text="YMAP :" />
+      <Label layoutX="46.0" layoutY="92.0" text="Nom Station :" textFill="#6b11e1" />
+      <Label layoutX="46.0" layoutY="124.0" text="Localisation Station :" textFill="#8d11eb" />
+      <Label layoutX="46.0" layoutY="160.0" text="Type Station :" textFill="#530ddd" />
+      <Label layoutX="46.0" layoutY="200.0" text="XMAP :" textFill="#6f0ad3" />
+      <Label layoutX="46.0" layoutY="233.0" text="YMAP :" textFill="#6e11e1" />
       <TextField fx:id="Stationname" layoutX="199.0" layoutY="88.0" promptText="Nom Station" />
       <TextField fx:id="Stationlocation" layoutX="199.0" layoutY="120.0" promptText="Localisation station" />
       <TextField fx:id="Stationtype" layoutX="199.0" layoutY="156.0" promptText="Bus/Train/Airport.." />
       <TextField fx:id="Stationx" layoutX="199.0" layoutY="196.0" promptText="Latitude" />
       <TextField fx:id="Stationy" layoutX="199.0" layoutY="229.0" promptText="Longtitude" />
-      <Button fx:id="addStation" layoutX="374.0" layoutY="229.0" mnemonicParsing="false" onAction="#AddStation" text="Ajouter Station" />
-      <Button fx:id="Cancel" layoutX="474.0" layoutY="229.0" mnemonicParsing="false" onAction="#Empltyfields" text="Annuler et retour" />
-      <Button fx:id="afficher" layoutX="374.0" layoutY="262.0" mnemonicParsing="false" onAction="#afficherstations" text="Afficher la liste des stations" />
+      <Button fx:id="addStation" layoutX="374.0" layoutY="229.0" mnemonicParsing="false" onAction="#AddStation" text="Ajouter Station" textFill="#5105cd" />
+      <Button fx:id="Cancel" layoutX="474.0" layoutY="229.0" mnemonicParsing="false" onAction="#Empltyfields" text="Annuler et retour" textFill="#8508e4" />
+      <Button fx:id="afficher" layoutX="374.0" layoutY="262.0" mnemonicParsing="false" onAction="#afficherstations" text="Afficher la liste des stations" textFill="#ac13ee" />
    </children>
 </AnchorPane>
