--- a/WoldCupApp18/src/Views/FXMLAffichageTeamUser.fxml
+++ b/WoldCupApp18/src/Views/FXMLAffichageTeamUser.fxml
@@ -10,24 +10,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="554.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="guiTest.FXMLAffichageTeamUserController">
+<AnchorPane id="AnchorPane" prefHeight="554.0" prefWidth="782.0" style="-fx-background-color: #353b48;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAffichageTeamUserController">
    <children>
-      <ImageView fitHeight="129.0" fitWidth="134.0" layoutX="14.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="150.0" fitWidth="286.0" layoutX="14.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Resources/Icons/FIFA_World_Cup_2018_Logo.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="121.0" fitWidth="190.0" layoutX="585.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../Resources/Icons/28235820_1814682398596456_1287436617_n.jpg" />
-         </image>
-      </ImageView>
-      <Label layoutX="257.0" layoutY="14.0" prefHeight="58.0" prefWidth="242.0" text="Teams" textAlignment="CENTER">
+      <Label layoutX="267.0" layoutY="21.0" prefHeight="58.0" prefWidth="242.0" text="Teams" textAlignment="CENTER" textFill="#d70b0b">
          <font>
             <Font name="System Italic" size="80.0" />
          </font>
       </Label>
-      <TableView fx:id="table" layoutX="14.0" layoutY="215.0" prefHeight="304.0" prefWidth="416.0">
+      <TableView fx:id="table" layoutX="14.0" layoutY="215.0" prefHeight="304.0" prefWidth="416.0" style="-fx-background-color: #353b48;">
         <columns>
           <TableColumn fx:id="team" prefWidth="116.0" text="Teams" />
           <TableColumn fx:id="coach" prefWidth="136.0" text="Coach" />
@@ -37,11 +32,11 @@
       </TableView>
       <ImageView fx:id="flagview" fitHeight="150.0" fitWidth="200.0" layoutX="500.0" layoutY="172.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="logoview" fitHeight="150.0" fitWidth="200.0" layoutX="500.0" layoutY="338.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="PLAY" layoutX="500.0" layoutY="506.0" mnemonicParsing="false" onAction="#play" text="Anthem On" />
-      <Button fx:id="STOP" layoutX="622.0" layoutY="506.0" mnemonicParsing="false" onAction="#stop" text="Anthem Off" />
-      <ChoiceBox fx:id="choice" layoutX="24.0" layoutY="181.0" prefWidth="150.0" />
+      <Button fx:id="PLAY" layoutX="500.0" layoutY="506.0" mnemonicParsing="false" onAction="#play" style="-fx-background-color: #f5f6fa;" text="Anthem On" />
+      <Button fx:id="STOP" layoutX="622.0" layoutY="506.0" mnemonicParsing="false" onAction="#stop" style="-fx-background-color: #f5f6fa;" text="Anthem Off" />
+      <ChoiceBox fx:id="choice" layoutX="24.0" layoutY="181.0" prefWidth="150.0" style="-fx-background-color: #f5f6fa;" />
       <TextField fx:id="rechercheteam_txt" layoutX="211.0" layoutY="181.0" />
       <ComboBox fx:id="continents" layoutX="211.0" layoutY="181.0" onAction="#rechercheContinent" prefWidth="150.0" />
-      <ComboBox fx:id="groupes" layoutX="211.0" layoutY="181.0" onAction="#rechercheGroupes" prefWidth="150.0" />
+      <ComboBox fx:id="groupes" layoutX="211.0" layoutY="181.0" onAction="#rechercheGroupes" prefWidth="150.0" style="-fx-background-color: #f5f6fa;" />
    </children>
 </AnchorPane>
